--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
 #H2 DB Connect Console
-#http://localhost:8080/h2-console/login.jsp 
-spring.datasource.url=jdbc:h2:~/staroot:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#http://localhost:8080/h2
+
+#spring h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+ 
+ 
+spring.datasource.url=jdbc:h2:~/staroot;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#spring mustache
+spring.mustache.expose-session-attributes=true
+spring.mustache.expose-request-attributes=true
