--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
