--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
- 
+spring.h2.console.settings.web-allow-others=true 
  
 spring.datasource.url=jdbc:h2:~/staroot;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
