--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.25</version>
 		</dependency>
-
+<dependency>
+    <groupId>org.thymeleaf</groupId>
+    <artifactId>thymeleaf</artifactId>
+    <version>3.0.6.RELEASE</version>
+</dependency>
 	</dependencies>
 
 	<build>
