--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring mustache
 spring.mustache.expose-session-attributes=true
 spring.mustache.expose-request-attributes=true
+
+
+#spring file upload
+spring.http.multipart.max-file-size=10240KB
+spring.http.multipart.max-request-size=10240KB
