--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,13 @@ spring.datasource.url=jdbc:h2:~/staroot;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+
+#for REAL-env
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
+
+#for local-env
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.jpa.hibernate.ddl-auto=update
