--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.datasource.password=
 
 #for REAL-env
 #----------------------------------------
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 #----------------------------------------
 
 #for local-env
 #----------------------------------------
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 ##----------------------------------------
 
 spring.jpa.show-sql=true
