--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,11 @@ spring.mustache.expose-request-attributes=true
 #spring file upload
 spring.http.multipart.max-file-size=20240KB
 spring.http.multipart.max-request-size=20240KB
+
+#spring rabbit mq
+spring.rabbitmq.host=45.76.99.130
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=test
+spring.rabbitmq.password=test@1234
+
+
