--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,36 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-    
+        
+<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
+<!-- 
+<dependency>
+    <groupId>org.keycloak</groupId>
+    <artifactId>keycloak-spring-boot-starter</artifactId>
+    <version>4.7.0.Final</version>
+</dependency>
+ -->
+<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
+<dependency>
+    <groupId>org.keycloak</groupId>
+    <artifactId>keycloak-spring-boot-starter</artifactId>
+    <version>3.4.3.Final</version>
+</dependency>
+
+<!-- Swagger --> 			
+<dependency>
+	<groupId>io.springfox</groupId>
+	<artifactId>springfox-swagger2</artifactId>
+	<version>2.6.1</version>
+</dependency>
+		
+<dependency>
+	<groupId>io.springfox</groupId>
+	<artifactId>springfox-swagger-ui</artifactId>
+	<version>2.6.1</version>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
