--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 #H2 DB Connect Console
 #http://localhost:8080/h2
 
+server.port:18080
+
+
+
 #spring h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -43,4 +47,13 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=test
 spring.rabbitmq.password=test@1234
 
+
+#18.12.07 keycloak test
+#release comment for localtest,  this is not for staroot server (staroot.com) because there isn't keycload server
+#keycloak.auth-server-url=http://127.0.0.1:8080/auth
+#keycloak.realm=SpringBootKeycloak
+#keycloak.resource=staroot
+#keycloak.public-client=true
+#keycloak.security-constraints[0].auth-roles[0]=user
+#keycloak.security-constraints[0].security-collections[0].patterns=/ckeditor/file/*
 
