--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.22.RELEASE</version>
+		<!--<version>2.7.8</version>-->
 		<!--<version>1.5.3.RELEASE</version>-->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
@@ -168,6 +169,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						-Xms1024m -Xmx1024m -Dfile.encoding=UTF-8
+					</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
